--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
 </head>
+
 <body>
-        
+        <header>
+                <nav class="nav">
+                        <div class="nav__top">
+                                <div class="container">
+                                        <div class="info">
+                                                <p>Summer Sale For All Swim Suits And Free Express Delivery - OFF 50%!</p>
+                                                <a href="">ShopNow</a>
+                                        </div>
+                                        <div class="lang">
+                                                <select name="" id="">
+                                                        <option value="">English</option>
+                                                        <option value="">Russian</option>
+                                                        <option value="">Uzbek</option>
+                                                </select>
+                                        </div>
+                                </div>
+                        </div>
+                        <div class="nav__menu"></div>
+                </nav>
+        </header>
+
+        <main></main>
+
+        <footer></footer>
 </body>
+
 </html>
